# CallerVolume/src/main/java/com/api/boxwatch/callervolume/mapping/package-info.java
@@ -1,0 +1,10 @@
+/**
+ * This package contains objects and their mappings
+ * for Caller Volume API
+ */
+/**
+ * @author Publicis Sapient - Team 2 Interns
+ * @since 1.0
+ * @version 1.0
+ */
+package com.api.boxwatch.callervolume.mapping;
